# Piz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.h  draw.h  framebuffer.h  image.h  light.h  loader.h  macros.h  material.h  maths.h  matrix.h  object.h  pathtracer.h  plane.h  platform.h  polygon.h  program.h  scene.h  vector.h
platform/: win32.cpp
src/: camera.cpp  demo.cpp  demo.cu  demo_pathtracer.cpp  demo_pathtracer.cu  draw.cpp  framebuffer.cpp  framebuffer.cu  image.cpp  material.cpp  material.cu  maths.cpp  maths.cu  matrix.cpp  matrix.cu  object.cpp  object.cu  pathtracer.cpp  pathtracer.cu  plane.cu  scene.cu  vector.cpp  vector.cu
